--- a/.env
+++ b/.env
@@ -16,3 +16,8 @@ PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://symfony:ChangeMe@postgres:/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=0e4c40535134012212a1f84c5f3c3f59
+###< lexik/jwt-authentication-bundle ###
