--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+###> .idea ###
+/.idea/
+###< .idea ###
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -25,3 +28,7 @@
 ###> redis/data ###
 /docker/redis/data/
 ###< redis/data ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
