--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,26 +10,18 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            lazy: true
-            provider: users_in_memory
-
         login:
             pattern: ^/api/login
             stateless: true
-            anonymous: true
-            json_login: # or form_login
-                provider: fos_userbundle    #or your custom user provider
-                check_path: /api/login_check  #same as the configured route
+            json_login:
+                check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
-                require_previous_session: false
+
         api:
-            pattern: ^/api              # protected path
+            pattern: ^/api
             stateless: true
-            guard:
-                authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
+            jwt: ~
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
